@@ -1,3 +1,14 @@
+Update for version 10.2.3 - 29-Apr-2020 (MDD)
+	pkg/acs/calacs/Dates
+	pkg/acs/calacs/History
+	pkg/acs/calacs/Updates
+	pkg/acs/calacs/include/acs.h
+	pkg/acs/calacs/include/acsinfo.h
+	pkg/acs/calacs/include/acsversion.h
+	pkg/acs/calacs/lib/acsinfo.c
+	pkg/acs/calacs/lib/getccdtab.c
+	pkg/acs/calacs/lib/dodqi.c
+
 Update for version 10.2.2 - 10-Jan-2020 (MDD)
     pkg/acs/calacs/Dates
     pkg/acs/calacs/History
